DE2086: ensure input is visible

--- a/front_end/src/app/admin/rooms/room.component.scss
+++ b/front_end/src/app/admin/rooms/room.component.scss
@@ -1,6 +1,6 @@
 td {
   input[type=number] {
-    max-width: 80px;
+    width: 70px;
     background: #fff;
     -moz-appearance: textfield;
     &::-webkit-inner-spin-button, &::-webkit-outer-spin-button {
